[metadata]
name = hikari-saru
version = 0.1.0
author = bison
author_email = aliteralbison@protonmail.com
description = A personal toolkit for building discord bots with Hikari.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a-bison/hikari-saru
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
packages = saru
python_requires = >=3.9
install_requires =
    hikari >= 2.0.0.dev106
    hikari-lightbulb >= 2.2.0
